cmake_minimum_required(VERSION 3.21)
project(AMF0)

set(CMAKE_BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_library(AMF0 OBJECT
        ${CMAKE_CURRENT_SOURCE_DIR}/src/AMF0Decoder.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/src/AMFDataPacket.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/include/utils/NotFoundExcepcion.h)

target_include_directories(AMF0 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)